feat: react 工作笔记

--- a/简兆英_前端_简历.md
+++ b/简兆英_前端_简历.md
@@ -1,9 +1,5 @@
-## 个人信息
-- 简兆英/男/1999
-- 本科/暨南大学/软件工程/2021毕业
-- 联系方式（手机/邮箱）：13823468874 / oshinonya@qq.com
-- 个人页面：[Github](https://github.com/Bersder) | [个人博客](https://oshinonya.com) | [segmentfault](https://segmentfault.com/u/bersder)
-- **期望岗位**：前端开发
+## 简兆英  <small style="color:#888">前端开发工程师</small>
+男 | 23 | 暨南大学 | 软件工程本科 | 13823468874 | oshinonya@outlook.com
 
 ## 技能
 - 熟悉 Typescript、CSS、HTML5、Git、有良好的编码习惯
