--- a/简兆英_前端_简历.md
+++ b/简兆英_前端_简历.md
@@ -1,29 +1,30 @@
 ## 简兆英  <small style="color:#888">前端开发工程师</small>
-男 | 23 | 1.3年经验 | 暨南大学 | 软件工程本科 | 13823468874 | oshinonya@outlook.com
+男 | 23 | 1.5 年经验 | 暨南大学 | 软件工程 | 本科 | 13823468874 | oshinonya@outlook.com
 
 ## 工作经历/项目经历
 > **2020.09～2020.12、2021.07～2022.07 腾讯科技有限公司**——前端开发工程师
 >
-> 参与QQ浏览器百万DAU小说子业务开发，配合团队进行新老项目的开发、改造、重构、优化和CR
+> 参与QQ浏览器小说业务开发，主要投入在新老项目的开发、优化、重构和代码 CR 工作
 > 参与团队项目技术选型，公共库维护，脚手架搭建等基建工作
+> 作为核心成员参与小说书架、个人中心大型全新项目开发
 
-#### 小说新书架<small style="color:#888;float:right">2021.11～至今  ｜  TS、Hippy(类RN)、rematch</small>
+#### 小说新书架<small style="color:#888;float:right">2021.11～2022.07 ｜ TS、Hippy(类 RN)、rematch</small>
 
 小说主场景之一，重交互逻辑，提供正反选批量操作、分组、置顶、筛选等功能
 
-- 参与项目搭建和选型，全面拥抱函数式组件和 hooks，并选择 TS 友好的 rematch 作为状态管理方案
+- 参与项目搭建和选型，**全面拥抱函数式组件和 hooks**，并选择 TS 友好的 rematch 作为状态管理方案
 - 负责主要的交互逻辑，包括**基于二进制掩码实现的编辑态系统；手势事件差异的屏蔽层（统一坐标系）；弹窗逻辑的抽象、复用和集中管理**
 - 维护书架不同实体的**原子操作、局部刷新**逻辑
 
-#### 小说频道性能优化<small style="color:#888;float:right;">2022.04～2022.05  ｜  TS、Hippy(类RN)</small>
+#### 小说频道性能优化<small style="color:#888;float:right;">2022.04～2022.05 ｜ TS、Hippy(类 RN)</small>
 
-小说频道作为早期拷贝代码有着非常重的历史包袱，对内导致开发困难，对外导致首屏加载缓慢
+小说频道历史包袱重，开发维护难，首屏加载、渲染缓慢
 - 设计实现通用打点工具库，补齐性能上报缺失，量化性能指标，分析性能瓶颈并制定优化方案
-- 着重在**异步阻塞**、**包体积**、**CPU/内存**三个方向上优化，配合后台迁移协议，取得【入口文件包大小减小25%，平均首帧显示耗时降低20+%】成效
+- 着重在**异步阻塞**、**包体积**、**CPU/内存**三个方向上优化，取得【入口文件包大小减小 25%，平均首帧耗时降低 20+%】成效
 
-#### 无障碍适配器<small style="color:#888;float:right">2022.03～2022.03  ｜  TS、Hippy(类RN)</small>
+#### 小说场景无障碍适配方案<small style="color:#888;float:right">2022.03～2022.03 ｜ TS、Hippy(类 RN)</small>
 
-为方便老年人阅读，在开启“关怀模式”后，需放大字体和部分图片，提升颜色对比度的同时维持可阅读性
+为方便老年人阅读，在开启“关怀模式”后，放大字体和部分图片、提升颜色对比度以维持可阅读性
 
 - **以代理模式为核心设计实现兼容 StyleSheet 的工具类**，减少代码侵入性的同时提供定制扩展能力；配合惰性计算和计算缓存降低性能上的影响
 - 使用该方案可避免编写两份相似样式和在 render 函数中编写大量动态样式判断逻辑，**极大降低无障碍适配成本**
@@ -35,19 +36,16 @@ ___
 - 【个人博客全栈】项目地址：[https://github.com/Bersder/Von](https://github.com/Bersder/Von) 项目预览：[https://oshinonya.com](https://oshinonya.com) 
 
   - 个人执念和兴趣产物，自造轮子，一人独自全栈开发，更新，维护
-
-
   - 前端 Vue 开发，Nuxt 实现 SSR，适配双端；后端 PHP + MariaDB + Python 数据采集
 
-
-- 【小说H5/接入服务】：参与小说H5页面开发，探索新技术的使用（Vue3、Nuxt3、pinia）；参与小说中间层 nodejs 开发
-- 【微前端脚手架】：基于 yeoman 开发，可根据用户选择提供不同的开发方案，快速创建上手即用的项目，并集成司内CI/CD实现快速部署
+- 【小说H5/接入服务】：参与小说 H5 页面开发，探索新技术的使用（Vue3、Nuxt3、pinia）；参与小说中间层 nodejs 开发
+- 【微页面脚手架】：基于 yeoman 开发，可根据用户选择提供不同的开发方案，快速创建上手即用的项目，并集成司内 CI/CD 实现快速部署
 
 ## 技能
 
-- 熟练使用 Typescript、React、Vue、Git 进行开发，有良好的编码习惯
-- 熟悉 Hippy（类RN）跨端开发；工作之余开发过一段时间 Flutter，使用上比较熟悉 Dart、Flutter
-- 上手过一段时间并掌握： Node、MySQL、PHP、Python、Nginx
+- 熟练使用 Typescript、React、Vue 进行开发，了解相关实现原理
+- 熟悉 Hippy（类 RN）跨端开发；工作之余开发过一段时间 Flutter，熟悉 Dart
+- 上手过一段时间并掌握：Node、MySQL、PHP、Python、Nginx
 - 掌握基本计算机网络和操作系统概念
 
 ## 自我评价
