--- a/简兆英_前端_简历.md
+++ b/简兆英_前端_简历.md
@@ -31,7 +31,7 @@
 
 ___
 
-> 个人项目/次要项目
+> 其他项目
 
 - 【个人博客全栈】项目地址：[https://github.com/Bersder/Von](https://github.com/Bersder/Von) 项目预览：[https://oshinonya.com](https://oshinonya.com) 
 
