feat: react 工作笔记

--- a/简兆英_前端_简历.md
+++ b/简兆英_前端_简历.md
@@ -43,7 +43,7 @@ ___
 
 ## 技能
 
-- 熟练使用 Typescript、React、Vue 进行开发，了解相关实现原理
+- 熟练使用 Typescript、React 进行开发，了解相关实现原理；Vue 次之
 - 熟悉 Hippy（类 RN）跨端开发；工作之余开发过一段时间 Flutter，熟悉 Dart
 - 上手过一段时间并掌握：Node、MySQL、PHP、Python、Nginx
 - 掌握基本计算机网络和操作系统概念
