--- a/简兆英_前端_简历.md
+++ b/简兆英_前端_简历.md
@@ -13,7 +13,7 @@
 小说主场景之一，重交互逻辑，提供正反选批量操作、分组、置顶、筛选等功能
 
 - 参与项目搭建和选型，**全面拥抱函数式组件和 hooks**，并选择 TS 友好的 rematch 作为状态管理方案
-- 负责主要的交互逻辑，包括**基于二进制掩码实现的编辑态系统；手势事件差异的屏蔽层（统一坐标系）；弹窗逻辑的抽象、复用和集中管理**
+- 负责主要的交互逻辑：**基于二进制掩码实现的编辑态系统；手势事件差异的屏蔽层（统一坐标系）；弹窗逻辑的抽象、复用和集中管理**
 - 维护书架不同实体的**原子操作、局部刷新**逻辑
 
 #### 小说频道性能优化<small style="color:#888;float:right;">2022.04～2022.05 ｜ TS、Hippy(类 RN)</small>
@@ -26,7 +26,7 @@
 
 为方便老年人阅读，在开启“关怀模式”后，放大字体和部分图片、提升颜色对比度以维持可阅读性
 
-- **以代理模式为核心设计实现兼容 StyleSheet 的工具类**，减少代码侵入性的同时提供定制扩展能力；配合惰性计算和计算缓存降低性能上的影响
+- **以代理模式为核心设计实现兼容 StyleSheet 的工具类**，减少代码侵入性的同时提供定制扩展能力；配合惰性计算和计算缓存提升性能
 - 使用该方案可避免编写两份相似样式和在 render 函数中编写大量动态样式判断逻辑，**极大降低无障碍适配成本**
 
 ___
@@ -39,12 +39,12 @@ ___
   - 前端 Vue 开发，Nuxt 实现 SSR，适配双端；后端 PHP + MariaDB + Python 数据采集
 
 - 【小说H5/接入服务】：参与小说 H5 页面开发，探索新技术的使用（Vue3、Nuxt3、pinia）；参与小说中间层 nodejs 开发
-- 【微页面脚手架】：基于 yeoman 开发，可根据用户选择提供不同的开发方案，快速创建上手即用的项目，并集成司内 CI/CD 实现快速部署
+- 【微页面脚手架】：基于 yeoman 开发，可提供不同的开发方案，快速创建上手即用的项目，并集成司内 CI/CD 实现快速部署
 
 ## 技能
 
 - 熟练使用 Typescript、React 进行开发，了解相关实现原理；Vue 次之
-- 熟悉 Hippy（类 RN）跨端开发；工作之余开发过一段时间 Flutter，熟悉 Dart
+- 熟悉 React Native 跨端开发；工作之余开发过一段时间 Flutter，熟悉 Dart
 - 上手过一段时间并掌握：Node、MySQL、PHP、Python、Nginx
 - 掌握基本计算机网络和操作系统概念
 
