--- a/interview/resume/简兆英_前端_简历.md
+++ b/interview/resume/简兆英_前端_简历.md
@@ -3,7 +3,7 @@
 >教育经历：暨南大学 | 软件工程 | 本科
 
 ## 工作经历/项目经历
-> **2020.09～2020.12、2021.07～2022.08 腾讯科技有限公司**——前端开发工程师
+> **2020.09～2020.12、2021.07-01～2022.07-28 腾讯科技有限公司**——前端开发工程师
 >
 > 参与QQ浏览器小说业务开发，包括 RN、H5、Node 项目的开发、优化、重构和代码 CR 工作
 > 参与团队项目技术选型，公共库维护，脚手架搭建等基建工作
@@ -11,11 +11,11 @@
 
 ##### 小说新书架<small style="color:#888;float:right">2021.11～2022.07 ｜ TS、Hippy(类 RN)、rematch</small>
 
-<font color='#999'>小说主场景之一，有着非常重的交互逻辑和复杂的数据逻辑，提供正反选批量操作、分组、置顶、筛选等功能</font>
+<font color='#999'>小说主场景之一，有着比较重的交互逻辑和复杂的数据逻辑，提供正反选批量操作、分组、置顶、筛选等功能</font>
 
 - 逼近 React 的最佳实践，全面拥抱TS、函数式组件和 hooks，选择 rematch(redux) 作为状态管理方案
-- 设计实现交互层核心逻辑：基于二进制的编辑态模型；手势事件差异的屏蔽层；弹窗逻辑的抽象、复用和集中管理
-- 参与数据层逻辑开发：实现十余种原子操作和局部刷新逻辑；通过策略模式设计实现书籍、分组等多种不同类型实体的操作
+- 设计实现交互层核心逻辑：包括二进制编辑状态管理；手势事件差异屏蔽层；弹窗逻辑的抽象、复用和集中管理
+- 参与部分数据层逻辑开发：如局部刷新逻辑，不同场景不同操作下接口调用和数据更新的分离实现等
 
 ##### 小说频道首屏性能优化<small style="color:#888;float:right;">2022.04～2022.05 ｜ TS、Hippy(类 RN)</small>
 
@@ -26,12 +26,12 @@
 
 ##### RN 无障碍适配方案<small style="color:#888;float:right">2022.03～2022.03 ｜ TS、Hippy(类 RN)</small>
 
-<font color='#999'>为方便老年人阅读，在开启“关怀模式”后，启用另一套样式，放大字体和部分图片、提升颜色对比度以维持可阅读性</font>
+<font color='#999'>为方便老年人阅读，在开启“关怀模式”后启用另一套样式，放大字体和部分图片、提升颜色对比度以维持可阅读性</font>
 
-- 以代理模式为核心设计实现兼容 StyleSheet 的工具类，并提供额外扩展能力，配合惰性计算和计算缓存提升性能
-- 接入时只需简单替换 StyleSheet.create 方法即可，避免内联动态样式的编写，极大降低无障碍适配成本
+- 以代理模式为核心设计实现兼容 StyleSheet 的工具类，提供额外扩展能力，配合惰性计算和计算缓存提升性能
+- 接入时只需简单替换 StyleSheet.create 方法即可，避免两份样式和判断逻辑的编写，极大降低无障碍适配成本
 
-##### 小说前端接入服务<small style="color:#888;float:right">2021.08～2022.03 ｜ TS、Egg</small>
+##### 小说前端接入服务<small style="color:#888;float:right">2021.08～2022.01 ｜ TS、Egg</small>
 
 <font color='#999'>聚合后台基础服务接口，将数据灵活转换和划分成前端视图理解的形式，并在前端侧提供动态控制能力</font>
 
