--- a/interview/resume/简兆英_前端_简历.md
+++ b/interview/resume/简兆英_前端_简历.md
@@ -45,7 +45,7 @@ ___
 - 「微页面脚手架」：基于不同的开发方案（SSR/CSR等）快速创建项目，并集成司内工具实现快速部署
 - 「个人博客全栈」项目地址：[https://github.com/Bersder/Von](https://github.com/Bersder/Von) 项目预览：[https://oshinonya.com](https://oshinonya.com) 
   - 学生时代个人执念和兴趣产物，自造轮子，一人独自全栈开发，更新，维护
-  - 前端 Vue 开发，Nuxt 实现 SSR，适配双端；后端 PHP + MariaDB + Python 数据采集
+  - 前端 Vue 开发，Nuxt 实现 SSR，适配双端；后端 Nginx + PHP + MariaDB + Python 数据采集
 
 ## 技能
 
